<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CitiesListActivity.CitiesActivity"
    tools:showIn="@layout/activity_cities_list">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tvLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/no_city_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>